# ondc_deeplink_consumer

./: .gitignore  .semantic-release.yaml  CHANGELOG.md  README.md  README.md   pyproject.toml  pyproject1.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yaml
ondc_deeplink_consumer/: __init__.py  deeplink_resolver.py  host_mapping_cache.py  mapping.py  processor.py
tests/: test_beckn_processor.py  test_resolver.py
