[tool.poetry]
name = "ondc-deeplink-consumer"
version = "0.0.0"  # This can be updated by semantic-release
description = "Your package description here"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/sanushilshad/ondc_deeplink_consumer"

[tool.poetry.dependencies]
python = ">=3.11"
httpx = "0.28.1"
pyyaml = "6.0.2"
jsonschema = "4.23.0"

[tool.poetry.dev-dependencies]
pytest = "8.3.4"
pytest-httpx = "0.35.0"
pytest-asyncio = "0.25.3"
python-semantic-release = "^9.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
